cleaned up scripts and improved directory organization
Former-commit-id: 9061b3e732d861d36b2b348bef6ca0357903ef1e

--- a/Proposal_Presentation/slides.tex
+++ b/Proposal_Presentation/slides.tex
@@ -29,7 +29,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-\logo{\includegraphics[width = 0.4\textwidth]{../../../Pictures/icllogo.jpg}}
+\logo{\includegraphics[width = 0.4\textwidth]{../Images/icllogo.jpg}}
 
 \title{\textbf{Climactic Drivers of Mosquito Abundance}}
 \author{Anne Marie Saunders}
@@ -67,7 +67,7 @@
 	\item Being able to predict abundances can help optimize control measures
 	\item Abundance dynamics are dependent on environmental factors that are likely to be affected by climate change}
 	
-	\includegraphics[width= 0.6\textwidth]{wnv_cases.pdf}
+	\includegraphics[width= 0.6\textwidth]{../Images/wnv_cases.pdf}
 \end{itemize}
 
 \end{frame}
@@ -79,7 +79,7 @@
 		\item The ability to predict changes in abundance could help optimize control measures\textcolor{white}{
 		\item Abundance dynamics are dependent on environmental factors that are likely to be affected by climate change}
 	
-	\includegraphics[width= 0.6\textwidth]{wnv_cases.pdf}
+	\includegraphics[width= 0.6\textwidth]{../Images/wnv_cases.pdf}
 \end{itemize}
 
 \end{frame}
@@ -91,7 +91,7 @@
 	\item The ability to predict changes in abundance could help optimize control measures
 	\item Abundance dynamics are dependent on environmental factors that are likely to be affected by climate change
 	
-	\includegraphics[width= 0.6\textwidth]{tpc.jpg}
+	\includegraphics[width= 0.6\textwidth]{../Images/tpc.jpg}
 	
 	\footnotesize Adapted from Shapiro et al. 2017
 	
@@ -161,7 +161,7 @@
 	\end{column}
 	\begin{column}{0.5\textwidth}  %%<--- here
 		\begin{center}
-			\includegraphics[height = 4.5cm, width=.9\textwidth]{floridamap.pdf}
+			\includegraphics[height = 4.5cm, width=.9\textwidth]{../Images/floridamap.pdf}
 		\end{center}
 	\vspace{1cm}
 	\end{column}
@@ -232,7 +232,7 @@
 \vspace{0.7cm}
 \begin{columns}
 	\begin{column}{0.7\textwidth}
-		\includegraphics[width = \textwidth]{temp_extracted.pdf}
+		\includegraphics[width = \textwidth]{../Images/temp_extracted.pdf}
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		
@@ -256,7 +256,7 @@
 \vspace{0.7cm}
 \begin{columns}
 	\begin{column}{0.7\textwidth}
-		\includegraphics[width = \textwidth]{count_extracted.pdf}
+		\includegraphics[width = \textwidth]{../Images/count_extracted.pdf}
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		
@@ -280,7 +280,7 @@
 \vspace{0.7cm}
 \begin{columns}
 	\begin{column}{0.7\textwidth}
-		\includegraphics[width = \textwidth]{weekly_agg.pdf}
+		\includegraphics[width = \textwidth]{../Images/weekly_agg.pdf}
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		
@@ -304,7 +304,7 @@
 \vspace{0.7cm}
 \begin{columns}
 	\begin{column}{0.7\textwidth}
-		\includegraphics[width = \textwidth]{biweekly_agg.pdf}
+		\includegraphics[width = \textwidth]{../Images/biweekly_agg.pdf}
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		
@@ -329,7 +329,7 @@
 \vspace{0.7cm}
 \begin{columns}
 	\begin{column}{0.7\textwidth}
-		\includegraphics[width = \textwidth]{monthly_agg.pdf}
+		\includegraphics[width = \textwidth]{../Images/monthly_agg.pdf}
 	\end{column}
 	\begin{column}{0.3\textwidth}
 		
@@ -395,7 +395,7 @@ $$ M_t = a_1T_{t-lag}^2 + a_2T_{t-lag} + b_1P_{t-lag}^2 + b_2P_{t-lag} + c$$
 \end{enumerate}
 \vspace{0.7cm}
 
-\includegraphics[width=0.5\textwidth]{chicken.jpg}
+\includegraphics[width=0.5\textwidth]{../Images/chicken.jpg}
 
 \vspace{1cm}
 \end{frame}
