Finished first draft of results figures
Former-commit-id: 158b043c8705a8aaafc2ae98041f7e38b2951b68

--- a/Write_Up/main.tex
+++ b/Write_Up/main.tex
@@ -9,6 +9,7 @@
 \usepackage{titlesec}
 \usepackage{caption}
 \usepackage{subcaption}
+%\usepackage[dvipsnames]{xcolor} % text color
 \usepackage{fixltx2e} % subscripts in text
 \usepackage{natbib} %check out citation styles: https://www.economics.utoronto.ca/osborne/latex/BIBTEX.HTM
 \setcounter{secnumdepth}{0} %removes numbering from all sections and levels below
@@ -98,7 +99,9 @@ This is the abstract
 \input{results.tex}
 \pagebreak
 
+\clearpage
 \input{discussion.tex}
+
 \end{linenumbers}
 
 \bibliographystyle{apalike}
