--- a/Write_Up/results.tex
+++ b/Write_Up/results.tex
@@ -1,9 +1,7 @@
 \section{Results}
 
-Figures/Charts: 
 
-1. time series of abundance, temp, and precipitation
-\begin{figure}[p]
+\begin{figure}[h!]
 
 		\begin{minipage}[]{.51\textwidth}
 			\includegraphics[height = 3in, width=3.2in]{../Images/temp_ts.pdf}
@@ -29,66 +27,151 @@ Figures/Charts:
 		\end{minipage}
 		
 	\label{fig: ts_plots}
-	\caption{Sample time series data of temperature, precipitation, and two vector species from Manatee County, Florida, 2012-2012. Data shown here are aggregated at the weekly scale. In \textbf{A.}, average daily maximum temperature per week shows regular seasonality with a range of about 15 \degree C. In \textbf{B.}, precipitation is very frequent during during a summer rainy season. This is common in all locations.\textbf{C.} and \textbf{D.} show patterns of abundance for two vector species, \textit{Aedes albopictus} and \textit{Culex nigripalpus}. Abundance datasets were non-continuous over winter periods where abundances are assumed to be low so traps are not employed.}
+	\caption{Time series data of temperature, precipitation, and two vector species from Manatee County, Florida, 2012-2016. Data shown here are aggregated at the weekly scale. In \textbf{A.}, average daily maximum temperature per week shows regular seasonality with a range of about 15 \degree C. In \textbf{B.}, precipitation is very frequent during during a summer rainy season. This is common in all locations. \textbf{C.} and \textbf{D.} show patterns of abundance for two vector species, \textit{Aedes albopictus} and \textit{Culex nigripalpus}. Abundance datasets were non-continuous over winter periods where abundances are assumed to be low so traps are not employed.}
 
 \end{figure}
 
-2. partial dependency plot of multivariate GAM of a sample species 
+%2. partial dependency plot of multivariate GAM of a sample species 
 
 \begin{figure}
-	\begin{minipage}[]{0.5\textwidth}
-		\includegraphics[height = 3.5in, width=3.5in]{../Images/multi_plotAQ.png}
-		
-		\hspace{4.5cm}\textbf{A.}\\
+	\begin{minipage}[]{\textwidth}
+		\centering
+		\includegraphics[height = 3in, width=6in]{../Images/multi_plotAQ.pdf}
 	\end{minipage}
-	\begin{minipage}[]{0.5\textwidth}
-	\includegraphics[height = 3.5in, width=3.5in]{../Images/multi_plotAA.png}
-	
-	\hspace{4.5cm}\textbf{B.}\\
+	\begin{minipage}[]{\textwidth}
+		\vspace{.3cm}
+		\hspace{5.2cm}\textbf{A.}
+		\hspace{7cm}\textbf{B.}
 	\end{minipage}
-
+	\caption{Sample of multivariate model fitting (Equation \ref{eq: multivariate1}) showing the partial dependency of \textit{Anopheles quadrimaculatus} abundance in Lee County, Florida on temperature and precipitation (Equation \ref{eq: multivariate1}) at the monthly temporal aggregation. Both temperature and precipitation are significant and best fit at a lag of two months.}
 	\label{fig: 3Dmulti}
-	\caption{This a sample of datasets fit with  multivariate models of temperature and precipitation at the best fit lags (Equation \ref{eq: multivariate1}). In \textbf{A.}, average \textit{Anopheles quadrimaculatus} count per trap at a weekly resolution was best fit according to univariate model comparison (Equations \ref{eq: univariateT} and \ref{eq: univariateP}) with temperature at a lag of six weeks and precipitation with a lag of four weeks. Both temperature and precipitation were significant. In \textbf{B.}, a Aedes albopictus abundance at a monthly resolution was best fit with temperature at a lag of one month  and precipitation in the contemporary month. In this dataset, only precipitation was significant.}
 
 \end{figure}
 
+%3. Table comparing deviance explained of different temporal resolutions
 
-\begin{figure}
-	\centering
-	\includegraphics[height = 3.5in, width=7in]{../Images/multi_plot2.png}
-	\caption{This is my second option for demonstrating multivariate model fits (versus Fig. \ref{fig: 3Dmulti})}
-\end{figure}
-
-3. Table comparing deviance explained of different temporal resolutions
-
-\begin{table}[h]
+\begin{table}[h!]
 \begin{center}
 \begin{tabularx}{.8\textwidth}{| L{0.5}  C{0.5}  C{.5}  C{0.5} | }
 	\hline
 	\multicolumn{4}{|l|}{Median Deviance Explained at Various Temporal Resolutions}\\
 	\hline
-	County & Weekly & Biweekly & Monthly \\
+	County & Weekly & Bimonthly & Monthly \\
 	\hline
-	Lee & 31.9\% & 42.2\% & *52.2\% \\
-	Manatee & 24.8\% & 21.6\% & *34.1\% \\
-	Orange & 17.0\% & 15.8\% & *21.3\% \\
-	Saint Johns & *8.5\% & 7.4\% & 8.4\% \\
-	Walton & 23.3\% & 40.0\% & *49.9\% \\
+	Lee & 37.7\% & 45.8\% & *52.2\% \\
+	Manatee & 30.2\% & 35.5\% & *40.1\% \\
+	Orange & 26.2\% & 29.0\% & *35.0\% \\
+	Saint Johns & 13.0\% & *25.9\% & 12.6\% \\
+	Walton & 31.7\% & 40.2\% & *49.9\% \\
 	\hline
-	All Counties & 20.0\% & 22.2\% & *31.9\% \\
+	All Counties & 28.6\% & 33.0\% & *37.9\% \\
 	\hline
+	%\multicolumn{4}{l}{\small *marks the best-performing temporal scale in each row} \\
 	
 \end{tabularx}
-\label{tab: bestres}
-\caption{This table makes me hate Saint Johns}
+\caption{Deviance explained by the best fit multivariate model of temperature and precipitation for each dataset summarised by the median value at each location and temporal resolution. Median was used because the distribution of deviance explained was left skewed. The best-performing temporal resolution in each row is marked with an asterisk.}
+\label{tab: bestresdevexplained}
+\end{center}
+\end{table}
 
+\begin{table}[h!]
+\begin{center}
+	\begin{tabularx}{.8\textwidth}{| L{0.5}  C{0.5}  C{.5}  C{0.5} | }
+		\hline
+		\multicolumn{4}{|l|}{Median MAE at Various Temporal Resolutions}\\
+		\hline
+		County & Weekly & Bimonthly & Monthly \\
+		\hline
+		Lee & *3.6 & 9.66 & 11.87 \\
+		Manatee & 1.04 & 0.92 & *0.90 \\
+		Orange & 0.50 & 0.44 & *0.43 \\
+		Saint Johns & 0.20 & 0.20 & 0.20 \\
+		Walton & 0.26 & 0.22 & *0.19 \\
+		\hline
+		All Counties & *0.76 & 0.83 & 0.78 \\
+		\hline
+		
+	\end{tabularx}
+
+	\caption{This table is an alternative to Table \ref{tab: bestresdevexplained}. Deviance is a relative measure that summarises the percent of deviance of the dataset that is explained by the model. MAE (Mean Absolute Error), on the other hand, is an absolute measure that can be interpreted as the average error in the mosquitoes predicted for each dataset. It is non-directional. I chose MAE over RMSE because RMSE would be larger for datasets with more data points (weekly level), fit nonwithstanding. This info will be in methods. The real caption will mirror the caption of the alternative Deviance Explained table. %Here, the median of MAE is used because the distribution of MAE is left-skewed.   
+	}
+	\label{tab: bestresMAE}
+	
 \end{center}
 \end{table}
 
 
-5. Plot showing effect of autoregressive term. Also include in words what the AIC difference was between AR and non-AR model
+\begin{table}[h!]
+	\begin{center}
+		\caption{Significance of temperature and precipitation in seven major vector species across Florida locations according to a multivariate GAM (Equation \ref{eq: multivariate1}) constructed with the best fit lags of each variable at a monthly resolution. Each species was present in every location. Significance is marked with by the presence of a T for temperature and P for precipitation. Total locations with significant temperature and precipitation are summed for each species}
+		\begin{tabularx}{\textwidth}{| L{0.25} | C{0.25}  C{.25}  C{0.25} C{0.25} C{.25}  C{0.25} | }
+			\hline
+			%\multicolumn{7}{|l|}{Significance of Temperature and Precipitation Across Locations}\\
+			%\hline
+			 \textbf{Locations}& \small{\textit{Aedes\textsuperscript{1}}} & \textit{\small Aedes\textsuperscript{2}} & %\textit{\small Aedes\textsuperscript{3}} &
+			 \textit{\small Anopheles\textsuperscript{1}} & \textit{\small Culex\textsuperscript{1}} & \textit{\small Culex\textsuperscript{2}} & \textit{\small Culiseta\textsuperscript{1}} \\\hline
+			 
+			 %\textbf{Locations} &&&&&&& \\
+			 Lee & \textcolor{white}{T}\quad P & \textcolor{white}{T}\quad P %& T\quad P 
+			 & T\quad P & T\quad \textcolor{white}{P} & T\quad P & T\quad P \\
+			 
+			 Manatee & T\quad \textcolor{white}{P} & T\quad P & T\quad P %& T\quad \textcolor{white}{P} 
+			 & T\quad \textcolor{white}{P} &  T\quad P &T\quad \textcolor{white}{P} \\
+			 
+			 Orange & T\quad P & T\quad \textcolor{white}{P} 
+			 %& T\quad \textcolor{white}{P} 
+			 & T\quad \textcolor{white}{P} & T\quad \textcolor{white}{P} &  T\quad P &\textcolor{white}{T}\quad P \\
+			 
+			 St. Johns & T\quad P & \textcolor{white}{T}\quad P %& T\quad P 
+			 &  & T\quad P 
+			 &  \textcolor{white}{T}\quad P &\textcolor{white}{T}\quad P \\
+			 
+			 Walton & T\quad P & T\quad P &% & 
+			 & T\quad \textcolor{white}{P} & T\quad \textcolor{white}{P} & T\quad P \\\hline
+			 
+			 \textbf{Total P} & \textcolor{white}{T}\quad 4 &  \textcolor{white}{T}\quad 4 & %\textcolor{white}{T}\quad 3 &
+			 \textcolor{white}{T}\quad 1 & \textcolor{white}{T}\quad 1 &
+			 \textcolor{white}{T}\quad 4 &
+			 \textcolor{white}{T}\quad 4 \\\hline
+			 
+			 \textbf{Total T} & 4
+			 \quad \textcolor{white}{P} & 3 \quad \textcolor{white}{P} %& 4 \quad \textcolor{white}{P} 
+			 & 3 \quad \textcolor{white}{P} & 5 \quad \textcolor{white}{P} & 4 \quad \textcolor{white}{P} & 3 \quad \textcolor{white}{P} \\\hline
+			 
+			 \multicolumn{7}{l}{}\\
+			 
+			 \multicolumn{7}{l}{\textit{Aedes\textsuperscript{1} = Aedes atlanticus tormentor morphological group; Aedes\textsuperscript{2} = Aedes albopictus;}}\\
+			 
+			 \multicolumn{7}{l}{\textit{Anopheles\textsuperscript{1} = Anopheles quadrimaculatus; Culex\textsuperscript{1} = Culex pipiens morphological group;}}\\
+			 
+			 \multicolumn{7}{l}{\textit{Culex\textsuperscript{2} = Culex nigripalpus; Culiseta\textsuperscript{1} = Culiseta melanura}} \\
+			
+		\end{tabularx}
+		
+		\label{tab: compare_sites}
+	\end{center}
+\end{table}
 
-\begin{figure}
-	\centering
-	\includegraphics[width= 5in, height = 3in]{../Images/devcomp.pdf}
+%5. Plot showing effect of autoregressive term. Also include in words what the AIC difference was between AR and non-AR model
+
+
+
+\begin{figure}[b]
+	
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=3.2in, height=3in]{../Images/devcomp.pdf}
+	\end{minipage}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=3in, height=3in]{../Images/AICcomp.pdf}
+	\end{minipage}
+	\begin{minipage}{\textwidth}
+		\hspace{.25\textwidth}
+		\textbf{A.}
+		\hspace{.5\textwidth}
+		\textbf{B.}
+	\end{minipage}
+	\caption{Comparison of the fit of autoregressive versus non-autoregressive meteorological models of mosquito abundance for each monthly dataset (Equations \ref{eq: multivariate1} and \ref{eq: multivariate2}, respectively). After removing 8 datasets where the autoregressive model did not converge, 121 datasets were compared. In \textbf{A.} a histogram of the difference in deviance explained between the autoregressive and non-autoregressive model for each dataset is shown. Mean change in deviance explained with the incorporation of an autoregressive term was \textbf{+18.7\%} across all locations. Four datasets had a decrease (range of [-2.1\%, -0.2\%]) in deviance explained with incorporation of an autoregressive term. In \textbf{B.}, the number of datasets where the autoregressive model was a better, equal, and worse fit than the non-autoregressive model is shown. Models were selected using AIC. AIC differences of less than 2 were considered to be equally best fit \citep{JOHNSON2004101} 
+	}
 \end{figure}
